syntax = "proto3";

package user;
option go_package = "github.com/Aditya-PS-05/NeetChamp/shared-libs/proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string role = 4;

  // Differentiate Mentee and Admin using oneof
  oneof user_details {
    Mentee mentee = 5;
    Admin admin = 6;
  }
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string role = 4;

  oneof user_update_details {
    Mentee mentee = 5;
    Admin admin = 6;
  }
}

message UpdateUserResponse {
  string message = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

// Mentee-specific fields
message Mentee {
  int32 experience = 1;
  int32 level = 2;
  int32 current_streak = 3;
  int32 longest_streak = 4;
  int32 quizzes_played = 5;
  int32 correct_answers = 6;
  string badges = 7;
}

// Admin-specific fields
message Admin {
  string permissions = 1;
  int32 managed_users = 2;
}
